<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/btn_newest"
            style="@style/ButtonTab"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_tab_high"
            android:layout_weight="1"
            android:text="@string/newest" />

        <TextView
            android:id="@+id/btn_trending"
            style="@style/ButtonTab"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_tab_high"
            android:layout_weight="1"
            android:text="@string/trending" />

        <TextView
            android:id="@+id/btn_most_viewed"
            style="@style/ButtonTab"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_tab_high"
            android:layout_weight="1.5"
            android:text="@string/most_viewed" />

        <TextView
            android:id="@+id/btn_hidden_gems"
            style="@style/ButtonTab"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_tab_high"
            android:layout_weight="1.5"
            android:text="@string/hidden_gems" />
    </LinearLayout>

    <com.bnkk.padc_ted.components.SmartRecyclerView
        android:id="@+id/rv_talks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>